Update package.json: Added author contact information

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rxa-backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Seghier Dahmane <seghier.dahmane@outlook.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
